# olympus-hephaestus

./: .gitignore  LICENSE  Makefile  README.md
cli/: Cargo.toml
cli/proto/: hephaestus.proto
cli/src/: arg.rs  main.rs
docs/: Client.md  Config.md  Plans.md
hephaestus/: Cargo.toml  build.rs
hephaestus/proto/: hephaestus.proto
hephaestus/src/: commands.rs  main.rs  stream_handler.rs  types.rs
hephaestus/src/services/: grpc.rs  hermes_client.rs  mod.rs  parser.rs
hephaestus/src/structs/: action.rs  enums.rs  historey_key.rs  mod.rs  plan.rs  step.rs
other/: client.conf  main.conf
other/certs/: hepha_test.csr  hepha_test.key  hepha_test.pem  hepha_test_ca.key  hepha_test_ca.pem  hepha_test_ca.srl
other/plans/test/: gitlab_backup.conf  gitlab_backup2.conf  hermes_latest_deploy.conf  test1.conf  test2.conf
other/plans/test#2/: test2.conf
sample/: main.conf
sample/plans/test/: gitlab_backup.conf  test.sh  test1.conf  test1.plan  test2.conf  test2.sh
sample/plans/test#2/: test.something.else.conf
