[package]
name = "hephaestus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
onlyati_config = { git = "https://gitlab.atihome.lan/rust-libs/onlyati-config", tag = "latest" }
tonic = {version = "0.8.3", features = ["tls"] }
prost = "0.11"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "fs", "sync"] }

[build-dependencies]
tonic-build = "0.8"
